src/snapshots/bevy_state_plugin_generator__generate__tests__generate_debug_info@fruits.txt.snap
---
source: src/generate.rs
expression: "generate_debug_info(src_path, source, &vec![])"
---
// src: fruits.txt
// Apple Orange { O1 O2 }
// []
