src/snapshots/bevy_state_plugin_generator__generate__tests__naming_scheme@root.txt_Shortened.snap
---
source: src/generate.rs
expression: "generate_full_source(src, source, plugin_config).unwrap_or_else(identity)"
---
// src: root.txt
 // RootState

        #![allow(missing_docs)]
        use bevy::prelude::AppExtStates;
    
pub mod states { use bevy::prelude::StateSet; #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
pub enum root.txt { #[default] RootState }

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(root.txt = root.txt::RootState)]
pub struct RootState; }
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin { fn build(&self, app: &mut bevy::app::App) { app.init_state::<states::root.txt>(); } }
