src/snapshots/bevy_state_plugin_generator__generate__tests__snapshots-2.snap
---
source: src/generate.rs
expression: "generate_all_type_definitions(Some(source), &node, scheme)"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Menu)]
pub enum GameMenu { #[default] Main, Options, Continue }

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(MenuMain = MenuMain::Main)]
pub struct MenuMainMain;
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(MenuOptions = MenuOptions::Options)]
pub enum MenuOptionsOptions { #[default] Graphics, Audio, Gameplay }

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(OptionsGraphics = OptionsGraphics::Graphics)]
pub struct OptionsGraphicsGraphics;
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(OptionsAudio = OptionsAudio::Audio)]
pub struct OptionsAudioAudio;
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(OptionsGameplay = OptionsGameplay::Gameplay)]
pub struct OptionsGameplayGameplay;
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(MenuContinue = MenuContinue::Continue)]
pub enum MenuContinueContinue { #[default] Save, Load }

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(ContinueSave = ContinueSave::Save)]
pub struct ContinueSaveSave;
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(ContinueLoad = ContinueLoad::Load)]
pub struct ContinueLoadLoad;
